<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main">

    <!-- Título de la pantalla -->
    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_estadisticas"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Filtros de fecha -->
    <LinearLayout
        android:id="@+id/llFiltros"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/tvDesde"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desde"
            android:contentDescription="@string/btn_desde_desc"/>

        <Button
            android:id="@+id/tvHasta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hasta"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/btn_hasta_desc"/>

        <Button
            android:id="@+id/btnFiltrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filtrar"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/btn_filtrar_desc"/>

    </LinearLayout>

    <!-- Contador de totales -->
    <TextView
        android:id="@+id/tvTotales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/totales_default"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/llFiltros"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"/>

    <!-- Dashboard con gráfico y datos -->
    <LinearLayout
        android:id="@+id/layoutDashboard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvTotales"
        app:layout_constraintBottom_toTopOf="@id/btnVolver"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Gráfico de barras -->
        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/barChart"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/grafico_satisfaccion"/>

        <!-- Tabla con los datos CSV -->
        <ScrollView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:importantForAccessibility="no">

            <LinearLayout
                android:id="@+id/dataContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>

    </LinearLayout>

    <!-- Botón volver al menú principal -->

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/btn_volver_desc"
        android:text="@string/volver_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnDescargarInforme"
        android:layout_width="248dp"
        android:layout_height="41dp"
        android:text="@string/descargar"
        tools:layout_editor_absoluteX="938dp"
        tools:layout_editor_absoluteY="10dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
